--- a/app/globals.css
+++ b/app/globals.css
@@ -4,85 +4,90 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-    --background: oklch(0.8452 0 0);
-    --foreground: oklch(0.2393 0 0);
-    --card: oklch(0.7572 0 0);
-    --card-foreground: oklch(0.2393 0 0);
-    --popover: oklch(0.7572 0 0);
-    --popover-foreground: oklch(0.2393 0 0);
-    --primary: oklch(0.5016 0.1887 27.4816);
+    --background: oklch(1 0 0);
+    --foreground: oklch(0.1884 0.0128 248.5103);
+    --card: oklch(0.9784 0.0011 197.1387);
+    --card-foreground: oklch(0.1884 0.0128 248.5103);
+    --popover: oklch(1 0 0);
+    --popover-foreground: oklch(0.1884 0.0128 248.5103);
+    --primary: oklch(0.6723 0.1606 244.9955);
     --primary-foreground: oklch(1 0 0);
-    --secondary: oklch(0.4955 0.0896 126.1858);
+    --secondary: oklch(0.1884 0.0128 248.5103);
     --secondary-foreground: oklch(1 0 0);
-    --muted: oklch(0.7826 0 0);
-    --muted-foreground: oklch(0.4091 0 0);
-    --accent: oklch(0.588 0.0993 245.7394);
-    --accent-foreground: oklch(1 0 0);
-    --destructive: oklch(0.7076 0.1975 46.4558);
-    --destructive-foreground: oklch(0 0 0);
-    --border: oklch(0.4313 0 0);
-    --input: oklch(0.4313 0 0);
-    --ring: oklch(0.5016 0.1887 27.4816);
-    --chart-1: oklch(0.5016 0.1887 27.4816);
-    --chart-2: oklch(0.4955 0.0896 126.1858);
-    --chart-3: oklch(0.588 0.0993 245.7394);
-    --chart-4: oklch(0.7076 0.1975 46.4558);
-    --chart-5: oklch(0.5656 0.0431 40.4319);
-    --sidebar: oklch(0.7572 0 0);
-    --sidebar-foreground: oklch(0.2393 0 0);
-    --sidebar-primary: oklch(0.5016 0.1887 27.4816);
-    --sidebar-primary-foreground: oklch(1 0 0);
-    --sidebar-accent: oklch(0.588 0.0993 245.7394);
-    --sidebar-accent-foreground: oklch(1 0 0);
-    --sidebar-border: oklch(0.4313 0 0);
-    --sidebar-ring: oklch(0.5016 0.1887 27.4816);
-    --font-sans: "Oxanium", sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-    --font-mono: "Source Code Pro", monospace;
-    --radius: 0px;
-    --shadow-2xs: 0px 2px 4px 0px hsl(0 0% 0% / 0.2);
-    --shadow-xs: 0px 2px 4px 0px hsl(0 0% 0% / 0.2);
-    --shadow-sm:
-        0px 2px 4px 0px hsl(0 0% 0% / 0.4), 0px 1px 2px -1px hsl(0 0% 0% / 0.4);
-    --shadow:
-        0px 2px 4px 0px hsl(0 0% 0% / 0.4), 0px 1px 2px -1px hsl(0 0% 0% / 0.4);
-    --shadow-md:
-        0px 2px 4px 0px hsl(0 0% 0% / 0.4), 0px 2px 4px -1px hsl(0 0% 0% / 0.4);
-    --shadow-lg:
-        0px 2px 4px 0px hsl(0 0% 0% / 0.4), 0px 4px 6px -1px hsl(0 0% 0% / 0.4);
-    --shadow-xl:
-        0px 2px 4px 0px hsl(0 0% 0% / 0.4), 0px 8px 10px -1px hsl(0 0% 0% / 0.4);
-    --shadow-2xl: 0px 2px 4px 0px hsl(0 0% 0% / 1);
-    --tracking-normal: 0em;
-    --spacing: 0.25rem;
-}
-
-.dark {
-    --background: oklch(0.2178 0 0);
-    --foreground: oklch(0.9067 0 0);
-    --card: oklch(0.285 0 0);
-    --card-foreground: oklch(0.9067 0 0);
-    --popover: oklch(0.285 0 0);
-    --popover-foreground: oklch(0.9067 0 0);
-    --primary: oklch(0.6692 0.1607 245.011);
-    --primary-foreground: oklch(1 0 0);
-    --secondary: oklch(0.9622 0.0035 219.5331);
-    --secondary-foreground: oklch(0.1884 0.0128 248.5103);
-    --muted: oklch(0.2645 0 0);
-    --muted-foreground: oklch(0.7058 0 0);
-    --accent: oklch(0.1928 0.0331 242.5459);
-    --accent-foreground: oklch(0.6692 0.1607 245.011);
+    --muted: oklch(0.9222 0.0013 286.3737);
+    --muted-foreground: oklch(0.1884 0.0128 248.5103);
+    --accent: oklch(0.9392 0.0166 250.8453);
+    --accent-foreground: oklch(0.6723 0.1606 244.9955);
     --destructive: oklch(0.6188 0.2376 25.7658);
     --destructive-foreground: oklch(1 0 0);
-    --border: oklch(0.4091 0 0);
-    --input: oklch(0.4091 0 0);
-    --ring: oklch(0.4091 0 0);
+    --border: oklch(0.9317 0.0118 231.6594);
+    --input: oklch(0.9809 0.0025 228.7836);
+    --ring: oklch(0.6818 0.1584 243.354);
     --chart-1: oklch(0.6723 0.1606 244.9955);
     --chart-2: oklch(0.6907 0.1554 160.3454);
     --chart-3: oklch(0.8214 0.16 82.5337);
     --chart-4: oklch(0.7064 0.1822 151.7125);
     --chart-5: oklch(0.5919 0.2186 10.5826);
-    --sidebar: oklch(0.2178 0 0);
+    --sidebar: oklch(0.9784 0.0011 197.1387);
+    --sidebar-foreground: oklch(0.1884 0.0128 248.5103);
+    --sidebar-primary: oklch(0.6723 0.1606 244.9955);
+    --sidebar-primary-foreground: oklch(1 0 0);
+    --sidebar-accent: oklch(0.9392 0.0166 250.8453);
+    --sidebar-accent-foreground: oklch(0.6723 0.1606 244.9955);
+    --sidebar-border: oklch(0.9271 0.0101 238.5177);
+    --sidebar-ring: oklch(0.6818 0.1584 243.354);
+    --font-sans: Open Sans, sans-serif;
+    --font-serif: Georgia, serif;
+    --font-mono: Menlo, monospace;
+    --radius: 1.3rem;
+    --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-sm:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-md:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-lg:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-xl:
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --tracking-normal: 0em;
+    --spacing: 0.25rem;
+}
+
+.dark {
+    --background: oklch(0 0 0);
+    --foreground: oklch(0.9328 0.0025 228.7857);
+    --card: oklch(0.2097 0.008 274.5332);
+    --card-foreground: oklch(0.8853 0 0);
+    --popover: oklch(0 0 0);
+    --popover-foreground: oklch(0.9328 0.0025 228.7857);
+    --primary: oklch(0.6692 0.1607 245.011);
+    --primary-foreground: oklch(1 0 0);
+    --secondary: oklch(0.9622 0.0035 219.5331);
+    --secondary-foreground: oklch(0.1884 0.0128 248.5103);
+    --muted: oklch(0.209 0 0);
+    --muted-foreground: oklch(0.5637 0.0078 247.9662);
+    --accent: oklch(0.1928 0.0331 242.5459);
+    --accent-foreground: oklch(0.6692 0.1607 245.011);
+    --destructive: oklch(0.6188 0.2376 25.7658);
+    --destructive-foreground: oklch(1 0 0);
+    --border: oklch(0.2674 0.0047 248.0045);
+    --input: oklch(0.302 0.0288 244.8244);
+    --ring: oklch(0.6818 0.1584 243.354);
+    --chart-1: oklch(0.6723 0.1606 244.9955);
+    --chart-2: oklch(0.6907 0.1554 160.3454);
+    --chart-3: oklch(0.8214 0.16 82.5337);
+    --chart-4: oklch(0.7064 0.1822 151.7125);
+    --chart-5: oklch(0.5919 0.2186 10.5826);
+    --sidebar: oklch(0.2097 0.008 274.5332);
     --sidebar-foreground: oklch(0.8853 0 0);
     --sidebar-primary: oklch(0.6818 0.1584 243.354);
     --sidebar-primary-foreground: oklch(1 0 0);
@@ -90,23 +95,28 @@
     --sidebar-accent-foreground: oklch(0.6692 0.1607 245.011);
     --sidebar-border: oklch(0.3795 0.022 240.5943);
     --sidebar-ring: oklch(0.6818 0.1584 243.354);
-    --font-sans: "Oxanium", sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-    --font-mono: "Source Code Pro", monospace;
-    --radius: 0px;
-    --shadow-2xs: 0px 2px 5px 0px hsl(0 0% 0% / 0.3);
-    --shadow-xs: 0px 2px 5px 0px hsl(0 0% 0% / 0.3);
+    --font-sans: Open Sans, sans-serif;
+    --font-serif: Georgia, serif;
+    --font-mono: Menlo, monospace;
+    --radius: 1.3rem;
+    --shadow-2xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-xs: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
     --shadow-sm:
-        0px 2px 5px 0px hsl(0 0% 0% / 0.6), 0px 1px 2px -1px hsl(0 0% 0% / 0.6);
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
     --shadow:
-        0px 2px 5px 0px hsl(0 0% 0% / 0.6), 0px 1px 2px -1px hsl(0 0% 0% / 0.6);
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 1px 2px -1px hsl(202.8169 89.1213% 53.1373% / 0);
     --shadow-md:
-        0px 2px 5px 0px hsl(0 0% 0% / 0.6), 0px 2px 4px -1px hsl(0 0% 0% / 0.6);
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 2px 4px -1px hsl(202.8169 89.1213% 53.1373% / 0);
     --shadow-lg:
-        0px 2px 5px 0px hsl(0 0% 0% / 0.6), 0px 4px 6px -1px hsl(0 0% 0% / 0.6);
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 4px 6px -1px hsl(202.8169 89.1213% 53.1373% / 0);
     --shadow-xl:
-        0px 2px 5px 0px hsl(0 0% 0% / 0.6), 0px 8px 10px -1px hsl(0 0% 0% / 0.6);
-    --shadow-2xl: 0px 2px 5px 0px hsl(0 0% 0% / 1.5);
+        0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0),
+        0px 8px 10px -1px hsl(202.8169 89.1213% 53.1373% / 0);
+    --shadow-2xl: 0px 2px 0px 0px hsl(202.8169 89.1213% 53.1373% / 0);
 }
 
 @theme inline {
